fix: Updated briefing spacing

--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -21,13 +21,20 @@ h2 {
   font-size: var(--fs-heading);
   font-weight: var(--fw-regular);
   color: var(--clr-white);
+  margin: 0;
 }
+
+  h2.briefing__text {
+    font-weight: var(--fw-medium);
+    /* margin-bottom: var(--spacer-300); */
+  }
 
 h3 {
   font-family: var(--ff-subheading);
   font-size: var(--fs-subheading);
   font-weight: var(--fw-regular);
   color: var(--clr-white);
+  margin-bottom: var(--spacer-300);
 }
 
 p, ol  {
@@ -36,6 +43,7 @@ p, ol  {
   font-weight: var(--fw-regular);
   text-decoration: none;
   color: var(--clr-text);
+  margin-bottom: var(--spacer-400);
 }
 
 a {
@@ -49,10 +57,6 @@ a {
   a:hover {
     color: var(--clr-primary);
   }
-
-h3,  p {
-  margin-bottom: var(--spacer-400);
-}
 
   #brandmark_text {
     margin-bottom: 0;
